<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.iteso.pam2017.ms705203.examen1a.NewBookActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:id="@+id/etNombre"
        />


    <TextView
        android:text="@string/tAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        />
    <Spinner
        android:id="@+id/autor_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/tEditorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEditorial"
        />
    <Spinner
        android:id="@+id/editorial_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Publish"
        android:id="@+id/etPublicacion"
        />


    <TextView
        android:text="@string/tCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPais"
        />
    <Spinner
        android:id="@+id/pais_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateB"
        android:text="@string/dateP"
        />
    <TextView
        android:layout_below="@+id/picDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showDate"
        android:textSize="18dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveB"
        android:text="@string/save"
        />

</LinearLayout>
</ScrollView>
    </LinearLayout>